Finished the todo list module. Pending profile, edit profile, filter tasks, complete tasks and recover password.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="add_task">Add Task</string>
     <string name="manage_tasks">Manage Tasks</string>
     <string name="item1">item1</string>
+    <string name="close_session">Close Session</string>
 </resources>
